--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,6 +25,10 @@ $mainYelllow: rgb(251, 192, 52);
 }
 
 
+.wrapper-parallax {
+    background-color: $navTextColor;
+    margin-bottom: 328px;
+}
 
 // social nav
 .nav-container {
@@ -58,17 +62,18 @@ $mainYelllow: rgb(251, 192, 52);
 
 // hero area
 .hero-container {
-    z-index: -100;
+    z-index: -1;
+    background-image: url("../img/heroImage.png");
+    background-size: cover;
+    background-position: center center;
     margin-top: -132px;
+    height: 60vh; 
     .hero-text {
-        position: absolute;
-        top: 45%;
-        left: 50%;
-        transform: translate(-50%, -50%);
         color: $navTextColor;
         font-size: 4rem;
         font-weight: 600;
         letter-spacing: 3px;
+        
     }
 }
 
@@ -114,13 +119,64 @@ $mainYelllow: rgb(251, 192, 52);
 
 // How to refister and order section
 .register-order-section {
+    background-color: $navTextColor;
     .video-container {
-        height: 60vh;
+        height: 70vh;
         width: 80%;
     }
     iframe {
         height: 100%;
         width: 100%;
+    }
+}
+
+//  FAQ section
+.faq-section {
+    z-index: 1;
+    background-image: url('../img/faqBackground.jpeg');
+    background-size: cover;
+    height: 787px;
+    padding: 0;
+    margin-left: -10px;
+
+    
+    .text-block {
+        margin-top: 2%; 
+        background-color: rgba(248, 248, 248, 0.657);
+        padding-top: 8%;
+        padding-bottom: 18%; 
+        padding-left: 7%;
+        height: 80%;
+    }
+    a {
+        text-decoration: none;
+        background-color: $mainBlue;
+        color: $navTextColor;
+        font-size: 0.8rem;
+    }
+}
+
+// footer
+.footer-section {
+    position: fixed;
+    bottom: 0;
+    z-index: -1;
+    //height: 40vh;
+    background-color: $mainBlue;
+    .row {
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+    p, a {
+        font-size: 0.9rem;
+        color: $navTextColor;
+    }
+    h5 {
+        color: $navTextColor;
+        font-size: 1rem;
+    }
+    .footer-logo {
+        margin-top: -5px;
     }
 }
 
