--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,12 @@
   background-color: rgba(10, 18, 32, 0.493);
 }
 
-.nav-container .nav-link {
+.nav-container .social-nav a {
   color: white;
+  text-decoration: none;
+  padding-right: 5px;
+  padding-left: 5px;
+  font-size: 1.15rem;
 }
 
 .nav-container .invisible-nav {
@@ -47,12 +51,16 @@
   color: black;
 }
 
+.nav-container .invisible-nav .navbar-toggler {
+  background-color: rgba(0, 0, 0, 0.65);
+}
+
 .hero-container {
   z-index: -1;
   background-image: url("../img/heroImage.png");
   background-size: cover;
   background-position: center center;
-  margin-top: -132px;
+  margin-top: -120px;
   height: 60vh;
 }
 
@@ -151,7 +159,7 @@
 }
 
 .footer-section p, .footer-section a {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   color: white;
 }
 
@@ -172,17 +180,33 @@
   .hero-container .hero-text {
     font-size: 3rem;
   }
+  .social-nav .account-items a {
+    font-size: 0.9rem;
+  }
 }
 
 @media (max-width: 576px) {
   .wrapper-parallax {
     margin-bottom: 581px;
   }
+  #social-items a, #discord-logo {
+    display: none;
+  }
 }
 
 @media (max-width: 1024px) and (min-width: 1024px) {
   .wrapper-parallax {
     margin-bottom: 400px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .wrapper-parallax {
+    margin-bottom: 300px;
+  }
+  .nav-container .social-nav, .nav-container .invisible-nav {
+    padding-left: 15%;
+    padding-right: 15%;
   }
 }
 
